--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
- html {
+html {
   line-height: 1.15;
   /* 1 */
   -webkit-text-size-adjust: 100%;
@@ -187,9 +187,9 @@ select {
  * Correct the inability to style clickable types in iOS and Safari.
  */
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
+[type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button;
 }
 
@@ -197,9 +197,9 @@ button,
  * Remove the inner border and padding in Firefox.
  */
 button::-moz-focus-inner,
-[type='button']::-moz-focus-inner,
-[type='reset']::-moz-focus-inner,
-[type='submit']::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -208,9 +208,9 @@ button::-moz-focus-inner,
  * Restore the focus styles unset by the previous rule.
  */
 button:-moz-focusring,
-[type='button']:-moz-focusring,
-[type='reset']:-moz-focusring,
-[type='submit']:-moz-focusring {
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -260,8 +260,8 @@ textarea {
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type='checkbox'],
-[type='radio'] {
+[type="checkbox"],
+[type="radio"] {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
@@ -271,8 +271,8 @@ textarea {
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type='number']::-webkit-inner-spin-button,
-[type='number']::-webkit-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -280,7 +280,7 @@ textarea {
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-[type='search'] {
+[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -290,7 +290,7 @@ textarea {
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type='search']::-webkit-search-decoration {
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -356,9 +356,9 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-    'Segoe UI Symbol';
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
   font-size: 16px;
   color: #1a1a1a;
 }
@@ -387,7 +387,7 @@ h3 {
 }
 
 h4 {
-  font-size: 1.5rem;
+  font-size: 2.5rem;
 }
 
 h5 {
@@ -399,7 +399,7 @@ h6 {
 }
 
 p {
-  font-size: 1.1rem;
+  font-size: 1.5rem;
   margin: 0 0 1rem;
   line-height: 1.5;
 }
@@ -979,7 +979,7 @@ a:hover {
   margin: 0;
   text-decoration: none;
   font-size: 1rem;
-  border-radius: 0.3rem;
+  border-radius: 25px;
   border: 1px solid transparent;
   outline: none;
   color: #1a1a1a;
@@ -1013,7 +1013,7 @@ a:hover {
 
 .btn.btn-primary {
   background-color: #2d3e50;
-  color: #d9e9e8;
+  color: #f1faee;
 }
 
 .btn.btn-primary:hover {
@@ -1030,16 +1030,16 @@ a:hover {
 }
 
 .btn.btn-info {
-  background-color: #1bbc9b;
+  background-color: #c44900;
   color: #ffffff;
 }
 
 .btn.btn-info:hover {
-  background-color: #31e1bd;
+  background-color: #c44900;
 }
 
 .btn.btn-light {
-  background-color: #d9e9e8;
+  background-color: #98c1d9;
   color: #1a1a1a;
 }
 
@@ -1085,21 +1085,27 @@ a:hover {
 
 .card {
   /* border: 1px solid #1a1a1a; */
+  border-radius: 25px;
   margin-bottom: 1rem;
 }
 
 .card .card-header {
   padding: 0.375rem;
   background-color: #2d3e50;
+  border-radius: 25px;
   color: #d9e9e8;
 }
 
 .card .card-body {
   padding: 0.375rem;
+  border-radius: 25px;
+  /* background-color: #778da9; */
+  font-weight: bold;
 }
 
 .card .card-footer {
-  border-top: 1px solid #1a1a1a;
+  /* border-top: 1px solid #1a1a1a; */
+  border-radius: 25px;
   padding: 0.375rem;
 }
 
@@ -1157,13 +1163,13 @@ form .form-input.form-input-squared {
   border-radius: 0;
 }
 
-form [type='checkbox'],
-form [type='radio'] {
+form [type="checkbox"],
+form [type="radio"] {
   display: inline-block;
 }
 
-label form [type='checkbox'],
-label form [type='radio'] {
+label form [type="checkbox"],
+label form [type="radio"] {
   display: inline-block;
 }
 
@@ -1257,7 +1263,7 @@ label form [type='radio'] {
   margin-right: -15px;
 }
 
-[class*='col-'] {
+[class*="col-"] {
   position: relative;
   width: 100%;
   padding-right: 15px;
@@ -1422,7 +1428,7 @@ label form [type='radio'] {
   .align-content-center-sm {
     align-content: center;
   }
-  #sidebar{
+  #sidebar {
     position: fixed;
     top: 20px;
     left: 0;
@@ -1524,9 +1530,9 @@ label form [type='radio'] {
   .align-content-center-md {
     align-content: center;
   }
-  #sidebar{
+  #sidebar {
     position: fixed;
-    top: 200px;
+    top: 245px;
     left: 0;
     bottom: 0;
     width: 300px;
@@ -1628,7 +1634,7 @@ label form [type='radio'] {
   }
   #sidebar {
     position: fixed;
-    top: 200px;
+    top: 245px;
     left: 0;
     bottom: 0;
     width: 300px;
