--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,7 +33,7 @@ header h1{
   top: 200px;
   left: 0;
   bottom: 0;
-  width: 300px;
+  width: 360px;
   z-index: 996;
   transition: all 0.3s;
   padding: 20px;
@@ -41,9 +41,10 @@ header h1{
   scrollbar-width: thin;
   scrollbar-color: #edede9 transparent;
   box-shadow: 0px 0px 20px rgba(58, 91, 148, 0.1);
-  /* background-color: #edede9;
-  opacity: 2; */
+  /* /* background-color: #edede9;
+  opacity: 2;  */
 }
+
 .sidebar-nav {
   padding: 0;
   margin: 0;
@@ -71,13 +72,13 @@ header h1{
 .sidebar-nav .nav-link {
   display: flex;
   align-items: center;
-  font-size: 15px;
+  font-size: 55px;
   font-weight: 600;
   color: #4154f1;
   transition: 0.3;
   background: #4866a2;
   padding: 10px 15px;
-  border-radius: 4px;
+  border-radius: 65px;
 }
 
 .sidebar-nav .nav-link i {
