got modal to display lists

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,7 +33,7 @@ header h1{
   top: 200px;
   left: 0;
   bottom: 0;
-  width: 360px;
+  width: 420px;
   z-index: 996;
   transition: all 0.3s;
   padding: 20px;
@@ -64,7 +64,7 @@ header h1{
 .sidebar-nav .nav-heading {
   font-size: 11px;
   text-transform: uppercase;
-  color: #899bbd;
+  color: #2d3e50;
   font-weight: 600;
   margin: 10px 0 5px 15px;
 }
@@ -74,11 +74,11 @@ header h1{
   align-items: center;
   font-size: 55px;
   font-weight: 600;
-  color: #4154f1;
+  color: #2d3e50;
   transition: 0.3;
   background: #4866a2;
   padding: 10px 15px;
-  border-radius: 65px;
+  /* border-radius: 65px; */
 }
 
 .sidebar-nav .nav-link i {
